@@ -276,13 +276,14 @@ warnings:
 check_PROGRAMS = tests/runtests tests/lib/apr-buffer-t tests/lib/factors-t \
 	tests/lib/hex-t tests/lib/interval-t tests/lib/keyring-t	   \
 	tests/lib/keys-t tests/lib/krb5-t tests/lib/krb5-tgt-t		   \
-	tests/lib/userinfo-t tests/lib/token-decode-t			   \
-	tests/lib/token-encode-t tests/lib/was-cache-t			   \
-	tests/lib/webkdc-krb-t tests/lib/webkdc-login-t			   \
-	tests/lib/webkdc-mf-t tests/portable/asprintf-t			   \
-	tests/portable/mkstemp-t tests/portable/setenv-t		   \
-	tests/portable/snprintf-t tests/portable/strlcat-t		   \
-	tests/portable/strlcpy-t tests/util/messages-t tests/util/xmalloc
+	tests/lib/userinfo-t tests/lib/token-crypto-t			   \
+	tests/lib/token-decode-t tests/lib/token-encode-t		   \
+	tests/lib/was-cache-t tests/lib/webkdc-krb-t			   \
+	tests/lib/webkdc-login-t tests/lib/webkdc-mf-t			   \
+	tests/portable/asprintf-t tests/portable/mkstemp-t		   \
+	tests/portable/setenv-t tests/portable/snprintf-t		   \
+	tests/portable/strlcat-t tests/portable/strlcpy-t		   \
+	tests/util/messages-t tests/util/xmalloc
 tests_runtests_CPPFLAGS = -DSOURCE='"$(abs_top_srcdir)/tests"' \
 	-DBUILD='"$(abs_top_builddir)/tests"'
 check_LIBRARIES = tests/tap/libtap.a
@@ -322,6 +323,8 @@ tests_lib_userinfo_t_CPPFLAGS = $(APR_CPPFLAGS) $(AM_CPPFLAGS)
 tests_lib_userinfo_t_LDFLAGS = $(APR_LDFLAGS) $(KRB5_LDFLAGS)
 tests_lib_userinfo_t_LDADD = tests/tap/libtap.a lib/libwebauth.la \
 	util/libutil.a portable/libportable.la $(APR_LIBS) $(KRB5_LIBS)
+tests_lib_token_crypto_t_LDADD = tests/tap/libtap.a lib/libwebauth.la \
+	util/libutil.a portable/libportable.la
 tests_lib_token_decode_t_LDADD = tests/tap/libtap.a lib/libwebauth.la \
 	util/libutil.a portable/libportable.la
 tests_lib_token_encode_t_LDADD = tests/tap/libtap.a lib/libwebauth.la \
